Prepare simple crud app in Quarkus